--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -22,8 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^0.0.2",
-    "yarm": "^0.4.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
