--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "homepage": "https://agustin26l.github.io/frontend",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
