--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -38,6 +39,6 @@
     "postcss": "^8.4.38",
     "sass": "^1.76.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.4"
   }
 }
